  * Don't setup ssl if certifcate are not there
  * Added dsf_helper/patch-apache.* 
  * Added a update_with_sql function in db-upgrade.pl and get in sync with
    latest db/*.sql
  * Fixed many typos in templates so lintian is happy
  * Removed php4 dependancies for gforge-db-postgresql and reordered
    postgresql one
  * Install plugins with gforge-web-apache 
  * Added mediawiki support

 -- Christian Bayle <bayle@debian.org>  Sat, 30 Sep 2006 20:48:24 +0200

gforge (4.5.14-10+3) unstable; urgency=low

  * [Roland] Updated Dutch debconf templates translation, from Bart
    Cornelis <cobaco@skolelinux.no> (closes: #384150).
  * [Roland] debian/rules: also remove binary files coming from uu-files
    coming from patches on clean.
  * [Roland] db-upgrade.pl: Fixed conversion of the Resolution field to
    the extra-fields system.

 -- Roland Mas <lolando@debian.org>  Sun,  3 Sep 2006 21:52:54 +0200

gforge (4.5.14-10) unstable; urgency=low

  * [Roland] Fixed control file (it referenced a gforge-plugin-scmcase
    package that never existed, rather than -scmccase).
  * [Roland] Updated from CVS.
  * [Roland] Updated French debconf templates translation, from Christian
    Perrier <bubulle@debian.org> and the French l10n team (closes:
    #382589).
  * [Roland] Updated Swedish debconf templates translation, from Daniel
    Nylander <po@danielnylander.se>.
  * [Roland] Updated Vietnamese debconf templates translation, from Clytie
    Siddall <clytie@riverland.net.au> and the Vietnamese free-software
    translation team.

 -- Roland Mas <lolando@debian.org>  Fri, 18 Aug 2006 09:12:54 +0200

gforge (4.5.14-9) unstable; urgency=low

  * [Roland] Uploading to unstable.  This means the bugs that were fixed
    during the experimental phase can now be closed (closes: #358241,
    #328224, #375863, #331835, #339646, #374384, #373554, #242186,
    #376155, #311791, #339878, #354591).
  * [Roland] fix-lists-url.dpatch: Fixed URL patterns for Mailman pages