@@ -1652,7 +1652,7 @@ END;
 		}
 
 		$query2 = "INSERT INTO role (role_id, group_id, role_name)
-                           VALUES ($rid, $group_id, 'rname')" ;
+                           VALUES ($rid, $group_id, '$rname')" ;
 		# &debug ($query2) ;
 		$sth2 =$dbh->prepare ($query2) ;
 		$sth2->execute () ;
@@ -2783,6 +2783,49 @@ $dbh->{RaiseError} = 1;
     	$dbh->commit () ;
     }
 
+    $version = &get_db_version ;
+    $target = "4.5.15-21" ;
+    if (&is_lesser ($version, $target)) {
+        &debug ("Fixing past mistakes in role naming") ;
+
+	my $defaultroles_restricted = {
+	    'Admin'	       => { 'projectadmin'=>'A', 'frs'=>'1', 'scm'=>'1', 'docman'=>'1', 'forumadmin'=>'2', 'trackeradmin'=>'2', 'pmadmin'=>'2' },
+	    'Senior Developer' => { 'projectadmin'=>'0', 'frs'=>'1', 'scm'=>'1', 'docman'=>'1', 'forumadmin'=>'2', 'trackeradmin'=>'2', 'pmadmin'=>'2' },
+	    'Junior Developer' => { 'projectadmin'=>'0', 'frs'=>'0', 'scm'=>'1', 'docman'=>'0', 'forumadmin'=>'0', 'trackeradmin'=>'0', 'pmadmin'=>'0' },
+	    'Doc Writer'       => { 'projectadmin'=>'0', 'frs'=>'0', 'scm'=>'0', 'docman'=>'1', 'forumadmin'=>'0', 'trackeradmin'=>'0', 'pmadmin'=>'0' },
+	    'Support Tech'     => { 'projectadmin'=>'0', 'frs'=>'0', 'scm'=>'0', 'docman'=>'1', 'forumadmin'=>'0', 'trackeradmin'=>'0', 'pmadmin'=>'0' }
+	} ;
+
+	foreach my $drname (keys %{$defaultroles_restricted}) {
+	    $query = "UPDATE role SET role_name='$drname' WHERE role_id IN (SELECT role.role_id" ;
+	    my $from = "" ;
+	    my $where = "" ;
+	    my $setting = "" ;
+	    my $value = 0 ;
+	    foreach my $setting (keys %{$defaultroles_restricted->{$drname}}) {
+		$value = $defaultroles_restricted->{$drname}->{$setting} ;
+		$from .= ", role_setting rs_$setting" ;
+		$where .= "role.role_id = rs_$setting.role_id AND rs_$setting.section_name='$setting' AND " ;
+		$where .= "rs_$setting.value = '$value' \nAND " ;
+	    }
+	    $query .= "\nFROM role$from" ;
+	    $query .= "\nWHERE $where role.role_name='rname')";
+	    push @reqlist, $query;
+	}
+	
+	foreach my $s (@reqlist) {
+	    $query = $s ;
+	    # debug $query ;
+	    $sth = $dbh->prepare ($query) ;
+	    $sth->execute () ;
+	    $sth->finish () ;
+	}
+	@reqlist = () ;
+
+        &update_db_version ($target) ;
+        &debug ("Committing.") ;
+        $dbh->commit () ;
+    }
 
 
     ########################### INSERT HERE #################################
