@@ -64,21 +64,20 @@ install: build
 	# (gforge is a meta-package and needs no files)
 	
 	# gforge-plugins
-	cp -r plugins $(CURDIR)/debian/gforge-common/usr/share/gforge/
-	#rm -rf $(CURDIR)/debian/gforge-common/usr/share/gforge/usr
-	cp -r $(CURDIR)/debian/gforge-common/usr/share/gforge/plugins/*/etc/* $(CURDIR)/debian/gforge-common/etc/gforge/
-	rm -rf $(CURDIR)/debian/gforge-common/usr/share/gforge/plugins/*/etc/*
-	rm -rf $(CURDIR)/debian/gforge-common/usr/share/gforge/plugins/*/debian
-	ln -s /var/lib/gforge/www/plugins $(CURDIR)/debian/gforge-common/usr/share/gforge/www
-	chown www-data:www-data $(CURDIR)/debian/gforge-common/var/lib/gforge/www/plugins
+	cp -r plugins $(CURDIR)/debian/gforge-plugins/usr/share/gforge/
+	cp -r $(CURDIR)/debian/gforge-plugins/usr/share/gforge/plugins/*/etc/* $(CURDIR)/debian/gforge-plugins/etc/gforge/
+	rm -rf $(CURDIR)/debian/gforge-plugins/usr/share/gforge/plugins/*/etc/*
+	rm -rf $(CURDIR)/debian/gforge-plugins/usr/share/gforge/plugins/*/debian
+	ln -s /var/lib/gforge/www/plugins $(CURDIR)/debian/gforge-plugins/usr/share/gforge/www
+	chown www-data:www-data $(CURDIR)/debian/gforge-plugins/var/lib/gforge/www/plugins
 	# mediawiki plugin
-	cp -r $(CURDIR)/debian/gforge-common/usr/share/gforge/plugins/mediawiki/usr $(CURDIR)/debian/gforge-common/
-	rm -rf $(CURDIR)/debian/gforge-common/usr/share/gforge/plugins/mediawiki/usr
-	mv $(CURDIR)/debian/gforge-common/usr/share/mediawiki1.7/LocalLdapSettings.php \
-	$(CURDIR)/debian/gforge-common/usr/share/mediawiki1.7/LocalLdapSettings.php.example
-	mv $(CURDIR)/debian/gforge-common/usr/share/mediawiki1.7/LocalSettings.php \
-	$(CURDIR)/debian/gforge-common/usr/share/mediawiki1.7/LocalSettings.php.gforge_example
-	mv $(CURDIR)/debian/gforge-common/usr/share/gforge/plugins/mediawiki/README $(CURDIR)/debian/gforge-common/usr/share/doc/gforge/README.mediawiki_plugin
+	cp -r $(CURDIR)/debian/gforge-plugins/usr/share/gforge/plugins/mediawiki/usr $(CURDIR)/debian/gforge-plugins/
+	rm -rf $(CURDIR)/debian/gforge-plugins/usr/share/gforge/plugins/mediawiki/usr
+	mv $(CURDIR)/debian/gforge-plugins/usr/share/mediawiki1.7/LocalLdapSettings.php \
+	$(CURDIR)/debian/gforge-plugins/usr/share/mediawiki1.7/LocalLdapSettings.php.example
+	mv $(CURDIR)/debian/gforge-plugins/usr/share/mediawiki1.7/LocalSettings.php \
+	$(CURDIR)/debian/gforge-plugins/usr/share/mediawiki1.7/LocalSettings.php.gforge_example
+	mv $(CURDIR)/debian/gforge-plugins/usr/share/gforge/plugins/mediawiki/README $(CURDIR)/debian/gforge-plugins/usr/share/doc/gforge-plugins/README.mediawiki
 
 	# gforge-common
 	install -m 644 etc/httpd.d/[0-9][0-9]*            $(CURDIR)/debian/gforge-common/usr/share/gforge/etc/httpd.d/
